i don't know what i'm doing

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     --primary: 0 0% 0%;
     --light: 0 0% 93%;
+    --accent: 14 100% 50%;
 
     --text-color: hsl(var(--primary));
     --background-color: hsl(var(--light));
@@ -57,7 +58,20 @@
   <h1>Yuzu Health Styles</h1>
 
   <div style="margin-bottom: 10px">
-    Retro style components built purely with css.
+    Retro style components built purely with css. Powers
+    <a
+      href="https://yuzu.health"
+      style="color: hsl(var(--accent))"
+      target="_blank"
+      >yuzu.health</a
+    >
+    and
+    <a
+      href="https://yuzu.party"
+      style="color: hsl(var(--accent))"
+      target="_blank"
+      >yuzu.party</a
+    >
   </div>
 
   <div>
