--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-<link rel="stylesheet" type="text/css" href="./src/panels.css" />
-<link rel="stylesheet" type="text/css" href="./src/tooltip.css" />
-<link rel="stylesheet" type="text/css" href="./src/backgrounds.css" />
-<link rel="stylesheet" type="text/css" href="./src/themes.css" />
+<link rel="stylesheet" type="text/css" href="./src/all.css" />
 
 <style>
   body {
@@ -80,6 +77,13 @@
       blocks.css
     </a>
   </div>
+
+  <br />
+
+  <code class="yuzui" style="padding: 10px; display: block">
+    &lt;link rel="stylesheet"
+    href="https://unpkg.com/@yuzu-health/yuzui/dist/all.min.css" /&gt;
+  </code>
 
   <br />
 
