updated site a bit

--- a/index.html
+++ b/index.html
@@ -220,10 +220,10 @@
 &lt;/div&gt;
 &lt;form class="<b>yuzui-row</b>"&gt;
   &lt;div class="yuzui"&gt;
-    &lt;input style="font-size: 16px" placeholder="Username" /&gt;
+    &lt;input placeholder="Username" /&gt;
   &lt;/div&gt;
   &lt;div class="yuzui"&gt;
-    &lt;input style="font-size: 16px" placeholder="Password" type="password" /&gt;
+    &lt;input placeholder="Password" type="password" /&gt;
   &lt;/div&gt;
   &lt;button class="yuzui"&gt;Submit&lt;/button&gt;
 &lt;/form&gt;
@@ -250,10 +250,10 @@
     &lt;button class="yuzui" style="padding: 6px 12px">x&lt;/button&gt;
   &lt;/div&gt;
   &lt;div class="yuzui"&gt;
-    &lt;input style="font-size: 16px" placeholder="Username" /&gt;
+    &lt;input placeholder="Username" /&gt;
   &lt;/div&gt;
   &lt;div class="yuzui"&gt;
-    &lt;input style="font-size: 16px" placeholder="Password" type="password" /&gt;
+    &lt;input placeholder="Password" type="password" /&gt;
   &lt;/div&gt;
   &lt;button class="yuzui" style="width: 100%">Submit&lt;/button&gt;
 &lt;/form&gt;
