--- a/index.html
+++ b/index.html
@@ -46,10 +46,19 @@
 ></div>
 
 <main style="padding: 20px; max-width: 1024px; margin: 0 auto">
-  <h1>Yuzu Health Styles</h1>
+  <h1>
+    yuzUI
+    <span style="font-weight: normal; font-size: 0.5em"
+      >created by yuzu health</span
+    >
+  </h1>
 
   <div style="margin-bottom: 10px">
-    Retro style components built purely with css. Powers
+    Retro style components built purely with css.
+    <a href="https://github.com/yuzu-health/yuzUI" target="_blank">
+      Github repo here.</a
+    >
+    Powers
     <a
       href="https://yuzu.health"
       style="color: hsl(var(--accent))"
