--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
   <h3>Buttons</h3>
   <div style="display: flex; flex-wrap: wrap; gap: 10px">
     <button class="yuzui" onclick="changeTheme()">Click me!</button>
-    <a class="yuzui">A link</a>
+    <a class="yuzui">Works with links</a>
+    <div class="yuzui button">Or anything</div>
     <button class="yuzui pressed">Pressed</button>
     <button class="yuzui loading">When Loading</button>
     <button class="yuzui flush">You can offset</button>
@@ -110,7 +111,8 @@
 
   <div style="display: grid; margin-top: 10px">
     <code>&lt;button class="<b>yuzui</b>"&gt;Click me!&lt;/button&gt;</code>
-    <code>&lt;a class="<b>yuzui</b>"&gt;A link&lt;/a&gt;</code>
+    <code>&lt;a class="<b>yuzui</b>"&gt;Works with links&lt;/a&gt;</code>
+    <code>&lt;div class="<b>yuzui button</b>"&gt;Or anything&lt;/div&gt;</code>
     <code>
       &lt;button class="<b>yuzui pressed</b>"&gt;Pressed&lt;/button&gt;
     </code>
