--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
   "
 ></div>
 
-<main style="padding: 20px; max-width: 1024px; margin: 0 auto">
+<main
+  style="padding: 20px; max-width: 1024px; margin: 0 auto; overflow-x: hidden"
+>
   <h1>
     yuzUI
     <span style="font-weight: normal; font-size: 0.5em"
