--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <meta name="viewport" content="width=device-width" />
 <link rel="stylesheet" type="text/css" href="./src/all.css" />
+<meta charset="utf-8" />
 
 <style>
   body {
