--- a/index.html
+++ b/index.html
@@ -105,25 +105,22 @@
   <h3>Buttons</h3>
   <div style="display: flex; flex-wrap: wrap; gap: 10px">
     <button class="yuzui" onclick="changeTheme()">Click me!</button>
-    <a class="yuzui">Works with links</a>
-    <div class="yuzui button">Or anything</div>
+    <div class="yuzui button">Works with anything</div>
     <button class="yuzui pressed">Pressed</button>
     <button class="yuzui loading">When Loading</button>
-    <button class="yuzui flush">You can offset</button>
   </div>
 
   <div style="display: grid; margin-top: 10px">
     <code>&lt;button class="<b>yuzui</b>"&gt;Click me!&lt;/button&gt;</code>
-    <code>&lt;a class="<b>yuzui</b>"&gt;Works with links&lt;/a&gt;</code>
-    <code>&lt;div class="<b>yuzui button</b>"&gt;Or anything&lt;/div&gt;</code>
+    <code
+      >&lt;div class="<b>yuzui button</b>"&gt;Works with
+      anything&lt;/div&gt;</code
+    >
     <code>
       &lt;button class="<b>yuzui pressed</b>"&gt;Pressed&lt;/button&gt;
     </code>
     <code>
       &lt;button class="<b>yuzui loading</b>"&gt;When Loading&lt;/button&gt;
-    </code>
-    <code>
-      &lt;button class="<b>yuzui flush</b>"&gt;You can offset&lt;/button&gt;
     </code>
   </div>
 
