--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <title>yuzUI</title>
 
 <meta name="viewport" content="width=device-width" />
-<link rel="stylesheet" type="text/css" href="./src/all.css" />
+<link rel="stylesheet" type="text/css" href="./dist/all.min.css" />
 <meta charset="utf-8" />
 
 <style>
