remove .DS_STORE

--- a/index.html
+++ b/index.html
@@ -393,22 +393,22 @@
   </div>
 
   <pre>
-&lt;div style="display: grid; gap: 10px"&gt;
-  &lt;div class="yuzui-theme-0 yuzui">Theme 0&lt;/div&gt;
-  &lt;div class="yuzui-theme-1 yuzui">Theme 1&lt;/div&gt;
-  &lt;div class="yuzui-theme-2 yuzui">Theme 2&lt;/div&gt;
-  &lt;div class="yuzui-theme-3 yuzui">Theme 3&lt;/div&gt;
-  &lt;div
-    class="yuzui"
-    style="
-      --yuzui-primary: 281 100% 50%;
-      --yuzui-light: 161 100% 16%;
-      --yuzui-panel: 0 100% 50%;
-      --yuzui-accent: 185 53% 50%;
-    "
-  &gt;
-    Custom theme with CSS Vars
-  &lt;/div&gt;
+&lt;div class="yuzui-theme-0 yuzui">Theme 0&lt;/div&gt;
+&lt;div class="yuzui-theme-1 yuzui">Theme 1&lt;/div&gt;
+&lt;div class="yuzui-theme-2 yuzui">Theme 2&lt;/div&gt;
+&lt;div class="yuzui-theme-3 yuzui">Theme 3&lt;/div&gt;
+&lt;div
+  class="yuzui"
+  style="
+    --yuzui-primary: 281 100% 50%;
+    --yuzui-light: 161 100% 16%;
+    --yuzui-panel: 0 100% 50%;
+    --yuzui-accent: 185 53% 50%;
+  "
+&gt;
+  Custom theme with CSS Vars
 &lt;/div&gt;
   </pre>
+
+  <div style="height: 50vh"></div>
 </main>
