--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
   <code class="yuzui" style="padding: 10px; display: inline-block">
     &lt;link rel="stylesheet"
-    href="https://yuzu-health.github.io/yuzUI/dist/all.min.css" /&gt;
+    href="https://unpkg.com/@yuzu-health/yuzui@1/dist/all.min.css" /&gt;
   </code>
 
   <div style="margin-top: 10px">
@@ -368,8 +368,6 @@
       &lt;/div&gt;
     </code>
   </div>
-
-  <br />
 
   <br />
 
