--- a/index.html
+++ b/index.html
@@ -62,16 +62,16 @@
       style="color: hsl(var(--yuzui-accent))"
       target="_blank"
     >
-      Github repo here.
-    </a>
+      Github repo here.</a
+    >
     Powers
     <a
       href="https://yuzu.health"
       style="color: hsl(var(--yuzui-accent))"
       target="_blank"
     >
-      yuzu.health
-    </a>
+      yuzu.health</a
+    >
     and
     <a
       href="https://yuzu.party"
@@ -107,6 +107,11 @@
     etc...
   </div>
 
+  <div style="margin-top: 10px">
+    IN DEVELOPMENT! Proceed at your own caution. Very finicky on mobile (works
+    on yuzu.party but not here for unclear reasons).
+  </div>
+
   <br />
 
   <h3>Buttons</h3>
@@ -134,6 +139,7 @@
   <br />
 
   <h3>Tooltips</h3>
+  <div>Doesn't work on mobile</div>
   <div style="display: flex; gap: 10px">
     <span class="right" style="padding: 4px" data-tooltip="Example tooltip">
       Hover on me!
@@ -374,10 +380,10 @@
   <h3>Themes</h3>
 
   <div style="display: grid; gap: 10px">
-    <div class="yuzui-theme-0 yuzui">Theme 0</div>
-    <div class="yuzui-theme-1 yuzui">Theme 1</div>
-    <div class="yuzui-theme-2 yuzui">Theme 2</div>
-    <div class="yuzui-theme-3 yuzui">Theme 3</div>
+    <div class="yuzui-theme-0 yuzui">0</div>
+    <div class="yuzui-theme-1 yuzui">1</div>
+    <div class="yuzui-theme-2 yuzui">2</div>
+    <div class="yuzui-theme-3 yuzui">3</div>
     <div
       class="yuzui"
       style="
@@ -391,10 +397,10 @@
   </div>
 
   <pre>
-&lt;div class="yuzui-theme-0 yuzui">Theme 0&lt;/div&gt;
-&lt;div class="yuzui-theme-1 yuzui">Theme 1&lt;/div&gt;
-&lt;div class="yuzui-theme-2 yuzui">Theme 2&lt;/div&gt;
-&lt;div class="yuzui-theme-3 yuzui">Theme 3&lt;/div&gt;
+&lt;div class="yuzui-theme-0 yuzui">0&lt;/div&gt;
+&lt;div class="yuzui-theme-1 yuzui">1&lt;/div&gt;
+&lt;div class="yuzui-theme-2 yuzui">2&lt;/div&gt;
+&lt;div class="yuzui-theme-3 yuzui">3&lt;/div&gt;
 &lt;div
   class="yuzui"
   style="
