--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 ></div>
 
 <main
-  class="yuzui-theme-selection"
+  class="yuzui-theme"
   style="padding: 20px; max-width: 1024px; margin: 0 auto; overflow-x: hidden"
 >
   <h1>
