--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
     pointer-events: none;
     top: 0;
     left: 0;
-    color: hsl(var(--yuzui-primary) / 0.05);
     --dashes-gap: 6px;
     z-index: -1;
   "
@@ -348,9 +347,15 @@
   <h3>Backgrounds</h3>
 
   <div style="display: flex; gap: 20px">
-    <div class="yuzui-bg-dots" style="width: 100px; height: 100px"></div>
+    <div
+      class="yuzui-bg-dots"
+      style="width: 100px; height: 100px; --color: currentColor"
+    ></div>
 
-    <div class="yuzui-bg-dashes" style="width: 100px; height: 100px"></div>
+    <div
+      class="yuzui-bg-dashes"
+      style="width: 100px; height: 100px; --color: black"
+    ></div>
 
     <div
       class="yuzui-bg-dots"
@@ -359,19 +364,25 @@
 
     <div
       class="yuzui-bg-dashes"
-      style="width: 100px; height: 100px; color: red; --dashes-gap: 10px"
+      style="width: 100px; height: 100px; --color: red; --dashes-gap: 10px"
     ></div>
   </div>
 
   <div style="display: grid; margin-top: 10px">
-    <code>&lt;div class="yuzui-bg-dots"&gt; &lt;/div&gt;</code>
-    <code>&lt;div class="yuzui-bg-dashes"&gt; &lt;/div&gt;</code>
+    <code
+      >&lt;div class="yuzui-bg-dots" style="--color: currentColor"&gt;
+      &lt;/div&gt;</code
+    >
+    <code
+      >&lt;div class="yuzui-bg-dashes" style="--color: black"&gt;
+      &lt;/div&gt;</code
+    >
     <code>
       &lt;div class="yuzui-bg-dots" style="--dot-size: 10px"&gt; &lt;/div&gt;
     </code>
     <code>
-      &lt;div class="yuzui-bg-dashes" style="--dashes-gap: 10px; color: red"&gt;
-      &lt;/div&gt;
+      &lt;div class="yuzui-bg-dashes" style="--dashes-gap: 10px; --color:
+      red"&gt; &lt;/div&gt;
     </code>
   </div>
 
