--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <title>yuzUI</title>
 
 <meta name="viewport" content="width=device-width" />
-<link rel="stylesheet" type="text/css" href="./dist/all.min.css" />
+<link rel="stylesheet" type="text/css" href="./src/all.css" />
 <meta charset="utf-8" />
 
 <style>
@@ -341,6 +341,24 @@
     shadow. <b>.all-flush</b> in the parent makes all children flush. Normally,
     the "raised" nature of the panel, unflushed, offsets the contents a bit.
   </i>
+
+  <br />
+
+  <br />
+
+  <div class="">
+    <div class="yuzui">Header</div>
+
+    <div class="yuzui-column yuzui" style="height: 200px">
+      <button type="button" class="yuzui" style="height: 70px">1</button>
+      <div class="yuzui" style="height: 70px">2</div>
+      <div class="yuzui" style="height: 70px">3</div>
+      <div class="yuzui" style="height: 70px">4</div>
+      <button type="button" class="yuzui" style="height: 70px">5</button>
+    </div>
+
+    <div class="yuzui">Footer</div>
+  </div>
 
   <br />
 
