--- a/index.html
+++ b/index.html
@@ -346,8 +346,8 @@
 
   <br />
 
-  <div class="">
-    <div class="yuzui">Header</div>
+  <div class="all-flush">
+    <!-- <div class="yuzui">Header</div> -->
 
     <div class="yuzui-column yuzui" style="height: 200px">
       <button type="button" class="yuzui" style="height: 70px">1</button>
@@ -357,7 +357,7 @@
       <button type="button" class="yuzui" style="height: 70px">5</button>
     </div>
 
-    <div class="yuzui">Footer</div>
+    <!-- <div class="yuzui">Footer</div> -->
   </div>
 
   <br />
