--- a/index.html
+++ b/index.html
@@ -350,11 +350,12 @@
     <!-- <div class="yuzui">Header</div> -->
 
     <div class="yuzui-column yuzui" style="height: 200px">
-      <button type="button" class="yuzui" style="height: 70px">1</button>
-      <div class="yuzui" style="height: 70px">2</div>
-      <div class="yuzui" style="height: 70px">3</div>
-      <div class="yuzui" style="height: 70px">4</div>
-      <button type="button" class="yuzui" style="height: 70px">5</button>
+      <button type="button" class="yuzui" style="height: 70px; flex-shrink: 0">
+        1
+      </button>
+      <div class="yuzui" style="height: 70px; flex-shrink: 0">2</div>
+      <div class="yuzui" style="height: 70px; flex-shrink: 0">2</div>
+      <button class="yuzui" style="height: 70px; flex-shrink: 0">2</button>
     </div>
 
     <!-- <div class="yuzui">Footer</div> -->
