ontouchstart empty body

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 <main
   class="yuzui-theme"
   style="padding: 20px; max-width: 1024px; margin: 0 auto; overflow-x: hidden"
+  ontouchstart=""
 >
   <h1>
     yuzUI
