working on mobile now

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <title>yuzUI</title>
 
 <meta name="viewport" content="width=device-width" />
-<link rel="stylesheet" type="text/css" href="./src/all.css" />
+<link rel="stylesheet" type="text/css" href="./dist/all.min.css" />
 
 <style>
   body {
@@ -106,11 +106,6 @@
     etc...
   </div>
 
-  <div style="margin-top: 10px">
-    IN DEVELOPMENT! Proceed at your own caution. Very finicky on mobile (works
-    on yuzu.party but not here for unclear reasons).
-  </div>
-
   <br />
 
   <h3>Buttons</h3>
@@ -138,7 +133,6 @@
   <br />
 
   <h3>Tooltips</h3>
-  <div>Doesn't work on mobile</div>
   <div style="display: flex; gap: 10px">
     <span class="right" style="padding: 4px" data-tooltip="Example tooltip">
       Hover on me!
