--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
     <div class="yuzui button">Works with anything</div>
     <button class="yuzui pressed">Pressed</button>
     <button class="yuzui loading">When Loading</button>
+    <button class="yuzui loading"></button>
   </div>
 
   <div style="display: grid; margin-top: 10px">
