--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
     <div class="yuzui button">Works with anything</div>
     <button class="yuzui pressed">Pressed</button>
     <button class="yuzui loading">When Loading</button>
+    <button class="yuzui loading fixed-right">When Loading</button>
     <button class="yuzui loading"></button>
   </div>
 
@@ -124,6 +125,10 @@
     >
     <code>
       &lt;button class="<b>yuzui pressed</b>"&gt;Pressed&lt;/button&gt;
+    </code>
+    <code>
+      &lt;button class="yuzui loading <b>fixed-right</b>"&gt;When
+      Loading&lt;/button&gt;
     </code>
     <code>
       &lt;button class="<b>yuzui loading</b>"&gt;When Loading&lt;/button&gt;
