layouts and grids

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </script>
 
 <div
-  class="yuzui-bg-dashes -use-panel"
+  class="yuzui-bg-grid -use-panel"
   style="
     position: fixed;
     height: 100vh;
@@ -445,3 +445,10 @@
 
   <div style="height: 50vh"></div>
 </main>
+
+<div class="yuzui-layout-grid" style="text-align: center">
+  <div style="background-color: lightgrey">1</div>
+  <div style="background-color: grey">2</div>
+  <div style="background-color: lightgrey">3</div>
+  <div style="background-color: grey">4</div>
+</div>
